Bug 164253 - qca-tls is missing in kopete
Summary: qca-tls is missing in kopete
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Jabber Plugin (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: VHI normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-06-16 22:32 UTC by Rainer Finke
Modified: 2009-03-30 05:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Finke 2008-06-16 22:32:03 UTC
Version:           0.50.80 (using 4.00.82 (KDE 4.0.82 >= 20080610), Debian packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.25-6.slh.3-sidux-686

If ssl connection is enabled kopete will ask for qca-tls package (whether it is installed or not). If libqca2-plugin-ossl is installed everything works without a failure.
Comment 1 Dennis Nienhüser 2008-06-16 22:44:56 UTC
The message should be reworded a bit, that's right. Too late for 4.1 due to string freeze however.
Comment 2 Matt Rogers 2009-03-30 05:11:38 UTC
SVN commit 946689 by mattr:

Fix error message to not mention qca-tls.

KDE 4.3 only due to string freeze
BUG: 164253

 M  +1 -1      jabberaccount.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=946689