Fix error message to not mention qca-tls.

KDE 4.3 only due to string freeze
BUG: 164253

svn path=/trunk/KDE/kdenetwork/kopete/; revision=946689